--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@tanstack/react-query-devtools": "^5.15.0",
     "axios": "^1.6.3",
     "classnames": "^2.5.0",
+    "i18next": "^23.7.15",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.0.0",
     "ts-pattern": "^5.0.6"
   },
   "devDependencies": {
