--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^5.15.0",
     "@tanstack/react-query-devtools": "^5.15.0",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.3",
     "classnames": "^2.5.0",
     "i18next": "^23.7.15",
