--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.0.0",
+    "react-intersection-observer": "^9.5.3",
     "ts-pattern": "^5.0.6"
   },
   "devDependencies": {
